# MGXS

./: .gitignore  CMakeLists.txt  README.md  main.cpp
MGXS_prototype_python/: README.md  Untitled1.ipynb  Untitled3.ipynb  k_effective_compute.ipynb  merge_flux.ipynb  merge_k_effective.ipynb  merge_multiple_calculations.ipynb  one_media.ipynb  output.txt  print_graphs_inf_media.ipynb  result_flux.txt0.txt  result_flux.txt1.txt
MGXS_prototype_python/Anisotopic_cs/: Untitled-Copy1.ipynb  box_from_article.ipynb  cylinder.ipynb  output  output.txt  sphere.ipynb  without_anisotropy.ipynb
MGXS_prototype_python/Lattice_Cell/: Untitled.ipynb
MGXS_prototype_python/Two_groups_flux/: Untitled.ipynb  flux_at_points.ipynb
MGXS_prototype_python/U235_Reactor/: Ray-tracing.ipynb  Untitled.ipynb  delta_tracking.ipynb  output  output.txt  result_flux0.txt  result_flux1.txt  result_flux2.txt  result_flux3.txt  result_flux4.txt  result_flux5.txt  result_flux6.txt  result_flux7.txt  result_flux8.txt
MGXS_prototype_python/flux_counting/: Netron_Flux_Slub.ipynb  Neutron_flux_cylinder.ipynb  Neutron_flux_sphere.ipynb  output  result_flux.txt0.txt  result_flux.txt1.txt  result_flux.txt2.txt  result_flux.txt3.txt  result_flux.txt4.txt  result_flux0.txt  result_flux1.txt  result_flux2.txt  result_flux3.txt  result_flux4.txt
MGXS_prototype_python/inf_media/: Untitled.ipynb  infinite_pu239.ipynb  output.txt
MGXS_prototype_python/recounting_flux_according_to_prototype/: Untitled.ipynb  Untitled1.ipynb  output  (+4 more)
cs/: SIG.hpp
geometry/: Plane.hpp  Universe.hpp
headers/: Particle.hpp
(+38 files in other folders)
